--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Roger BR</title>  
-   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Judson:200,500|Montserrat:300,600" rel="stylesheet">
 </head>
 <body>
