--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="jumbotron text-center">     
         <img src="https://media.licdn.com/dms/image/C5103AQFZ1RMhqJ1h_Q/profile-displayphoto-shrink_200_200/0?e=1577923200&v=beta&t=nyuACnuSPXEM4v_B_4rTsLE_rKidywYZydYTNouG6DA">
       <h2><b>Roger Ribera</b></h2>
-      <h4><b>R&D Supervisor @ Gulliver Studios</b></h4>
+      <h4>R&D Supervisor @ Gulliver Studios</h4>
       <h4>Lecturer @ Hanyang University</h4>
       <p>Developing artist friendly graphics technologies to create compelling digital humans, creatures or ... anything that might pop on production...</p>      
       
