--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <section id="title">    
     <div class="jumbotron text-center">     
-        <img src="https://media.licdn.com/dms/image/C5103AQFZ1RMhqJ1h_Q/profile-displayphoto-shrink_200_200/0?e=1577923200&v=beta&t=nyuACnuSPXEM4v_B_4rTsLE_rKidywYZydYTNouG6DA">
+        <img src="https://media-exp1.licdn.com/dms/image/C5103AQFZ1RMhqJ1h_Q/profile-displayphoto-shrink_200_200/0?e=1587600000&v=beta&t=BziaZsH2HoCLR5GvTeCDZFNuTlH7-k82agzmHMHOiAk">
       <h2><b>Roger Ribera</b></h2>
       <h4>R&D Supervisor @ Gulliver Studios</h4>
       <h4>Lecturer @ Hanyang University</h4>
