--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <section id="title">    
     <div class="jumbotron text-center">     
-        <img src="profile.j">
+        <img src="profile.jpg">
       <h2><b>Roger Ribera</b></h2>
       <h4>R&D Supervisor @ Gulliver Studios</h4>
       <h4>Lecturer @ Hanyang University</h4>
