Update job in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="jumbotron text-center">     
         <img src="profile.jpg">
       <h2><b>Roger Ribera</b></h2>
-      <h4>R&D Supervisor @ Gulliver Studios</h4>
+      <h4>sr. R&D Scientist @ NVIDIA Digital Human Tech</h4>
       <h4>Lecturer @ Hanyang University</h4>
       <p>Developing artist friendly graphics technologies to create compelling digital humans, creatures or ... anything that might pop on production...</p>      
       
