--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="profile.jpg">
       <h2><b>Roger Ribera</b></h2>
       <h4>sr. R&D Scientist @ NVIDIA Digital Human Tech</h4>
-      <h4>Lecturer @ Hanyang University</h4>
+      <h4>Adjunct Professor @ Hanyang University</h4>
       <p>Developing artist friendly graphics technologies to create compelling digital humans, creatures or ... anything that might pop on production...</p>      
       
       <ul class="social">
