--- a/index.html
+++ b/index.html
@@ -1,37 +1,32 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Roger BR</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.3/animate.min.css'>
-<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<head>  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.3/animate.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/css?family=Judson:200,500|Montserrat:300,600" rel="stylesheet">
 </head>
 <body>
-  <section id="title">    
-    <div class="jumbotron text-center">     
+  <section id="title">
+    <div class="jumbotron text-center">
         <img src="profile.jpg">
       <h2><b>Roger Ribera</b></h2>
       <h4>sr. R&D Scientist @ NVIDIA Digital Human Tech</h4>
       <h4>Adjunct Professor @ Hanyang University</h4>
-      <p>Developing artist friendly graphics technologies to create compelling digital humans, creatures or ... anything that might pop on production...</p>      
-      
+      <p>Developing artist friendly graphics technologies to create compelling digital humans, creatures or ... anything that might pop on production...</p>
+
       <ul class="social">
         <li><a href="https://twitter.com/rogerBiR" target="_blank"><i class="fa fa-4x fa-twitter"></i></a></li>
         <li><a href="https://github.com/rogerbr" target="_blank"><i class="fa fa-4x fa-github"></i></a></li>
         <li><a href="https://www.linkedin.com/in/rogerbr/" target="_blank"><i class="fa fa-4x fa-linkedin-square"></i></a></li>
-      </ul>    
+      </ul>
       </div>
-    
-</body>
-<!-- partial -->
+  </section>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
+  <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 </body>
 </html>
